--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    body {
+        width: 100vw;
+        height: 100vh;
+    }
+    #root{
+        width: 100%;
+        height: 100%;
+    }
+}
