feat(client): 加强Fab

--- a/packages/client/src/components/modal/Modal.module.less
+++ b/packages/client/src/components/modal/Modal.module.less
@@ -15,6 +15,7 @@
     align-items: center;
     /* 垂直居中 */
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
     /* 半透明背景，常用于模态背景 */
 }
 
