--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -12,8 +12,14 @@
         width: 100vw;
         height: 100vh;
     }
-    #root{
+    #root {
         width: 100%;
         height: 100%;
+    }
+}
+
+@layer utilities {
+    .shadow-outer {
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
 }
