feat(client): 创建房间

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -16,6 +16,24 @@
         width: 100%;
         height: 100%;
     }
+    h1 {
+        @apply text-2xl;
+    }
+    h2 {
+        @apply text-xl;
+    }
+    h3 {
+        @apply text-lg;
+    }
+    h4 {
+        @apply text-base;
+    }
+    h5 {
+        @apply text-sm;
+    }
+    h6 {
+        @apply text-xs;
+    }
 }
 
 @layer utilities {
